app/css/directives/general.css
/* center the text in <tr> tags in help panel (6.3 Equivalent Fractions & 9.1 Add and Subtract Like Fractions)*/
body {
	font-family: sans-serif;
	font-size:100%;
}
.bottomBlack {
	border-bottom: 1px solid black;
}
.bottomBlackPadded {
	padding-bottom:6px;
	border-bottom: 1px solid black;
}
.continuedDecimal {
	border-top: 1px solid black;
}
.borderTopBlue {
	border-top: 1px solid #069;
}
.center-tr-txt{
    text-align: center;
}

.comma-size {
	font-size:150%;
}

.decimalNoPadding {
	font-size:125%;
	padding:0;
}

.decimal-size {
	font-size:125%;
}

.conversion-table {
	text-align:center;
	border-collapse:collapse;
}

.conversion-table th, .conversion-table td{
	padding:8px;
	border:1px solid #333333
}

.modal-body .conversion-table {
	margin-left:80px;
}

.equivalence-table {
	text-align:center;
	margin-left:80px;
}

.exponentLarge {
	display: inline-block;
	height: 2em;
	vertical-align:top;
	font-size:125%;
}

.fixBottomRight {
	position:fixed;
	bottom:0;
	right:0;
	margin-right:20px;
}

.fixHelpControls {
	position:fixed;
	top:400;
	right:0;
	margin-right:50px;
}

.equivalence-table th {
	color: #069;
	font-size: 105%;
	font-weight: normal;
	padding-bottom: .2em;
}

.equivalence-table tr {
 	border-bottom: 1px solid black;
}

.equivalence-table tr:first-child {
 	border-bottom: 0px;
}

.equivalence-table tr:last-child {
 	border-bottom: 0px;
}

.equivalence-table tr td {
 	padding: .5em .2em;
}

div.fakeButton {
  display: inline-block;
  *display: inline;
  /* IE7 inline-block hack */

  *zoom: 1;
  padding: 4px 10px 4px;
  margin-bottom: 0;
  font-size: 125%;
  line-height: 18px;
  color: #333333;
  text-align: center;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  vertical-align: middle;
  background-color: #f5f5f5;
  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
  background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
  background-image: linear-gradient(top, #ffffff, #e6e6e6);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
  border: 1px solid #cccccc;
  border-bottom-color: #b3b3b3;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  cursor: pointer;
  *margin-left: .3em;

}

.floatLeft {
	float:left;
}

.hyphenByLineThrough {
	text-decoration:line-through;
	font-weight:normal;
}

.help-answer-text {
	display:block;	
	margin-left:50px;
	color: #069;
	font-size: 105%;
	font-weight: normal;
}

.help-answer-text .fraction hr {
	border-color: transparent transparent #069 transparent;
}

.help-answer-text-tight {
	display:block;	
	color: #069;
	font-size: 105%;
	font-weight: normal;
}

.help-answer-text-tight .fraction hr {
	border-color: transparent transparent #069 transparent;
}

.help-text-margin-width {
	margin-top:60px;
	width:6em;
}

.label_like {
	color: #069;
	font-size: 105%;
	font-weight: normal;
}
.margin_bottom_tiny {
	margin-bottom:6px;
}
.margin_bottom_small {
	margin-bottom:20px;
}
.margin_top_small {
	margin-top:20px;
}
.hiddenSpace {
	visibility:hidden;
}
.margin_bottom_neg {
	margin-bottom:-2px;
}
.tdButtonHeight > ms-expression > ms-row-group > table > tbody > tr > td {
	height:60px;
}
.tdButtonHeight50px > ms-expression > ms-row-group > table > tbody > tr > td {
	height:50px;
}
.tdButtonHeight80px > ms-expression > ms-row-group > table > tbody > tr > td {
	height:80px;
}
.marg {
	margin-right:1em;
}
.marginLeft40px {
	margin-left:40px;
}
.marginLeft80px {
	margin-left:80px;
}
.marginLeft132px {
	margin-left:132px;
}
.marginLeft180px {
	margin-left:180px;
}
sup, sub {
	font-weight:700;
}
sup.normalWeight, sub.normalWeight {
	font-weight:normal;
}
/*zero out padding and margin...used in ms-group*/
.zero td{
    margin: 0;
    padding: 0 2px;
}
.center-tbl table{
    margin: 0 auto;
}
.center {
    margin: 0 auto 20px auto;
}
.pad-left {
    padding: 0 0 0 10px;
}
/* add paddin and set width on input and select box (wb step-5 17.2 Unit Rates)*/
.Unit-Rates {
    padding: 0 0 10px 20px;
}
.Unit-Rates .bigger {
    font-size: 2em;
}
.Unit-Rates input {
    width: 40px;
    text-align: center;
}
.Unit-Rates select {
    width: 136px;
}

/* add paddin and set width on input box (16.4 proportion-application)*/
.proportion-application {
    padding: 0 0 10px 20px;
}
.proportion-application input {
    width: 60px;
    text-align: center;
}

.bottom-marg{
    margin-bottom: 20px;
}
/* problem text highlight-class (blue) */
.blue-text{
    color: #0088cc;
}
/* add margin to avoid charts that are wider than the problem panel   */
.buttonsright {
	float:right;
}
.feedbackwrapper {
	height:20px;
	margin-bottom:10px;
}
.problemwrapper {
	margin-top:30px;
}
.clskls372 .navbar-inverse .navbar-inner {
	background-image:none;
	background-color:darkblue;
}
ul.nav-list {
	columns: 2;
   -webkit-columns: 2; /* Safari and Chrome */
   -moz-columns: 2; /* Firefox */
}
ul.nav-list li {
	margin-bottom:5px;
}
.backRed {
	background:red;
}
button.btn {
	font-size:75%;
}
button.btn.btn-.large {
	font-size:110%;
}
button.btn.btn-.bigger {
	font-size:125%;
}
button.btn.btn-success.bigger {
	font-size:125%;
}
button.btn.btn-.huge {
	font-size:175%;
}
.fontsize110 {
	font-size:110%;
}
.fontsize125 {
	font-size:125%;
}
.minusSize125 {
	font-size:125%;
	padding-right:4px;
}
.specialMinus {
	font-size:85%;
	font-weight:bold;
}
.fontweightBold {
	font-weight:bold;
}
.huge {
	font-size:175%;
}
.hugeAndThin {
	font-size:175%;
	font-weight:100;
	font-family:"Open Sans"
}
.lineheight40 {
	line-height: 40%;
}
.rotate-45-clockwise {
    display: inline-block;
    -o-transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}
table td .width160ValignTop {
	width: 160px;
	vertical-align: top;
}
.textAlignRight {
	text-align: right;
}
.textAlignLeft {
	text-align: left;
}
.textAlignCenter {
	text-align: center;
}
.underline {
	text-decoration:underline;
}
.width400 {
	width: 400px;
}
.width380 {
	width: 380px;
}
.width40 {
	width: 40px;
}
.width130 {
	width: 130px;
}
.width140 {
	width: 140px;
}
.width158 {
	width: 158px;
}
.width160 {
	width: 160px;
}
.width170 {
	width: 170px;
}
.width180 {
	width: 180px;
}
.width200 {
	width: 200px;
}
.width210 {
	width: 210px;
}
.width220 {
	width: 220px;
}
/* .width160 select is used in data8_5.js*/
.width160 select{
	width: 160px;
}
.width120 input{
	width: 120px;
}
.width20 input{
	width: 20px;
}
.whiteSpaceNoWrap {
	white-space: nowrap;
}

